Bug 103084 and Bug 103085: Memory leaks in LDAP code. r=mitesh, sr=bienvenu.